--- a/applet/Makefile
+++ b/applet/Makefile
@@ -55,6 +55,7 @@ SRCS += sms.o
 SRCS += beep.o
 SRCS += irq_handlers.o # DL4YHF 2017-01-06
 SRCS += timer.o
+SRCS += led.o
 
 ifdef INC_DISPFLIP
 SRCS +=  dispflip.o  # display flip is included @ d13.020
